syntax = "proto3";

package IT.WebServices.Fragments.Authorization.Payment.Stripe;

import "google/protobuf/timestamp.proto";

import "Protos/IT/WebServices/Fragments/Authorization/Payment/SharedTypes.proto";

message StripeSubscriptionFullRecord {
	StripeSubscriptionRecord Subscription = 1;
	repeated StripePaymentRecord Payments = 2;
}

// User claim's record
message StripeSubscriptionRecord {
  string UserID = 1; // Guid for the user
  string SubscriptionID = 2; // Guid for the Subscription
  string StripeCustomerID = 3; // Id for the Customer with Stripe
  string StripeSubscriptionID = 4; // Id for the Subscription with Stripe
  SubscriptionStatus Status = 5;
  uint32 AmountCents = 11;
  uint32 TaxCents = 12;
  uint32 TaxRateThousandPercents = 13; //Tax rate 1.234% = 1234 or taxrate * 100000
  uint32 TotalCents = 14;
  google.protobuf.Timestamp CreatedOnUTC = 21;
  google.protobuf.Timestamp LastPaidUTC = 22;
  google.protobuf.Timestamp PaidThruUTC = 23;
  google.protobuf.Timestamp RenewsOnUTC = 24;
  google.protobuf.Timestamp CanceledOnUTC = 25;
  google.protobuf.Timestamp ChangedOnUTC = 26;
}

message StripePaymentRecord {
  string UserID = 1; // Guid for the user
  string SubscriptionID = 2; // Guid for the Subscription
  string PaymentID = 3; // Guid for the Payment
  string StripePaymentID = 4; // Id for the Payment with Stripe
  PaymentStatus Status = 5;
  uint32 AmountCents = 11;
  uint32 TaxCents = 12;
  uint32 TaxRateThousandPercents = 13; //Tax rate 1.234% = 1234 or taxrate * 100000
  uint32 TotalCents = 14;
  google.protobuf.Timestamp CreatedOnUTC = 21;
  google.protobuf.Timestamp PaidOnUTC = 22;
  google.protobuf.Timestamp PaidThruUTC = 23;
  google.protobuf.Timestamp ChangedOnUTC = 24;
}